src/css/album.css
.jumbotron {
  padding-top: 3rem;
  padding-bottom: 3rem;
  margin-bottom: 0;
  background-color: #fff;
}
@media (min-width: 769px) {
  .navbar{
    height: 60px;
  }
  .nav-item{
    padding-left: 35px
  }
  .navbar-collapse{
    padding-right: 5px
  }
}



@media (max-width: 768px) {
  .jumbotron {
    padding-top: 6rem;
    padding-bottom: 6rem;
  }

  .navbar-collapse{
    background-color: rgba(255, 255, 255, 0.95 );
  }

  .navbar-toggler{
    background-color: rgba(255, 255, 255, 0.95 );
    text-align: center;
  }
  .portfolio-title{
    font-size: 14px !important;
    margin-right: 0px !important; 
  }
  .navbar-brand{
    margin-right: 0px !important; 
  }

}

.jumbotron p:last-child {
  margin-bottom: 0;
}

.jumbotron-heading {
  font-weight: 300;
}

.jumbotron .container {
  max-width: 40rem;
}

footer {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

footer p {
  margin-bottom: .25rem;
}

.container-with-top-padding {
  padding-top: 150px;
  padding-left: 15%;
  padding-right: 15%;
}

.card-body {
  padding-top: 5px;
  padding-bottom: 5px;
}

.card-caption {
  height: 27px;
  object-fit: contain;
  font-family: "Open Sans";
  font-size: 17px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.35;
  letter-spacing: 1px;
  text-align: left;
  color: #000000;
  padding-top: 12px;
  padding-bottom: 12px;

}

.card-img {
  object-fit: cover;
  object-position: top;
  border-radius: 0px;
}

.border-radius-0{
  border-radius: 0%;
}

.bgimage {
  background-image: url("/public/tiles/squatty/poster.png")
}

.container-no-padding {
  padding-left: 0;
  padding-right: 0;
  padding-top: 86px;
}

.no-horizontal-padding {
  padding-left: 0%;
  padding-right: 0%;
}
.container-fluid {
  padding-right: 0;
  padding-left: 0;
}

 .translucent{
  background-color: rgba(255, 255, 255, 0.95 ) !important;
} 

.portfolio-title {
  height: 50%;
  -webkit-backdrop-filter: blur(30px);
  backdrop-filter: blur(30px);
  font-family: "Open Sans";
  font-size: 17px;
  font-weight: bolder;
  font-style: normal;
  font-stretch: normal;
  /* line-height: 1.5; */
  letter-spacing: 5px;
  text-align: left;
  color: #000000;
}
.designation {
  width: 212px;
  height: 27px;
  font-family: "Open Sans";
  font-size: 17px;
  font-weight: 300;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.35;
  letter-spacing: 2.4px;
  text-align: left;
  color: #000000;
  padding-left: 24px;
  padding-top: 12px;
}
.nav-link {
  width: 60px;
  height: 50%;
  object-fit: contain;
  font-family: "Open Sans";
  font-size: 17px;
  font-style: normal;
  font-stretch: normal;
  font-weight: normal;

  line-height: 1.35;
  letter-spacing: 2.4px;
  text-align: left;
  color: #505050;
}

.nav-link :active {
  width: 60px;
  height: 50%;
  object-fit: contain;
  font-family: "Open Sans";
  font-size: 20px;
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.35;
  letter-spacing: 2.4px;
  text-align: left;
  color:#000000;
}

.nav-right-padding{
  padding-left: 35px
}
/* 
.nav-list-padding-right{
  padding-right: 10%
} */


.btn{
  padding: 0%;
}

.site-logo{
  width: 36px;
  height: 36px;
  object-fit: contain;
}

.img-fluid{
  max-width: 100%;
  height: auto;
  width: 100%;
}

.spread-header-left{
  margin-left: 10%
}

.spread-tag{
  border-radius: 11px !important;
  border: 1px solid #a6a6a6;
  padding-left: 10px;
  padding-right: 10px;
  padding-top:8px!important;
  padding-bottom:8px!important;
  font-family: "Open Sans";
  font-size:14px; 
  font-weight: lighter;
}

.spread-project-heading {
  font-family: "Open Sans";
  font-size: 25px;
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.36;
  letter-spacing: 0.8px;
}

.spread-project-subheading {
  font-family: "Open Sans";
  font-size: 16px;
  letter-spacing: 0.6px;
  color: #a7a7a7;
}


.spread-tag-wrapper {
  padding-right: 8px;
}



.taglist li {
  float: left;
  margin: 10px 0;
  padding-right: 8px;
  list-style-type: none;
}

.taglist ul {
  margin: 0px; 
  padding: 0px !; 
  list-style-type: none; 
  list-style-image: none;
}

.award-thumb-img{
  width: 100%;
}

.container-padding-top {
  padding-top: 150px;
}
.project-date {
  font-family: "Open Sans";
  font-size: 17px;
}

.grey-spread-seperator{
  background-color: #f2f2f2;
  height: 10px;
}

.grey-spread-seperator-top{
  background-color: #f2f2f2;
  height: 65px;
}

.container-spread-heading{
  padding-top: 60px;
  padding-bottom:30px;
}

.bg-white{
  background-color: white;
}

.shadow {
  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.16);
}

.spread-img{
  max-width: 100%;
  max-height: auto ;
  height: auto;
}

.bg-grey{
  background-color: #f2f2f2;
}

.footer-container{
  border-top: 3px solid #cccccc;
  padding-top: 40px;
  padding-bottom: 30px;
  margin-top: 60px;
}

.copyright{
  font-family: "Open Sans"
}

.card-img{
  width: 100%;
}

.tile-root {
  padding-left: 7%;
  padding-right: 7%;
}

.card{
  border-radius: 0;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.album-card {
  margin-top: 5px;
  margin-bottom:5px;
}

.tile-horizontal-spacing{
  padding-right: 5px;
  padding-left: 5px;
}

.award-row {
  padding-top: 15px;
}

.toggle-button{
  border-color: transparent !important;
  color: #000000 !important;
}

@media (max-width: 500px) { 
  .album-container{
    padding-left: 0%;
    padding-right: 0%;
    margin-left: 0%;
    margin-right: 0%; 
  }

  .nav-container-spacing{
    padding-left: 2%;
    padding-right: 2%;
    margin-left:0%;
    margin-right:0%;
  }

  .container-with-top-padding {
    padding-top: 150px;
    padding-left: 0%;
    padding-right: 0%;
    margin-left:0%;
    margin-right:0%;
  }

}

@media (max-width: 992px) { 
  .card-caption {
    font-size: 15px;  
  }
 }

 .bd-placeholder-img {
  font-size: 1.125rem;
  text-anchor: middle;
}

@media (min-width: 768px) {
  .bd-placeholder-img-lg {
    font-size: 3.5rem;
  }
}

